# ParkAlgs

./: CMakeLists.txt  README.md  st.bash  tests.cpp
.github/workflows/: ci.yml
1/: 1.cpp
2/: 2.cpp  tests.txt
2/tests/: CMakeLists.txt
3/: 11test.cpp  3.cpp  3.txt
4/: 4.cpp  4.txt  CMakeLists.txt
5/: 5.cpp  5.txt  a.out
IGraph/: IGraph.h
SetGraph/: SetGraph.cpp  SetGraph.h
algs/: HeapSort.cpp  MergeSort.cpp  heapMAX.cpp  quicksort.cpp
m1/1/: CMakeLists.txt
m1/2/: 2.cpp  CMakeLists.txt  tests.txt
m1/4/: 4.cpp  Meagosrt.cpp
m1/5/: 5.cpp  5.txt  CMakeLists.txt
m1/6/: 6.cpp  CMakeLists.txt
m1/rk1/3/: CMakeLists.txt
m2/1/: 1.cpp  1.txt  CMakeLists.txt
m2/2/: 2.cpp
m2/4/: t.txt
m2/4/notOptimal/: CMakeLists.txt  st.bash  w.cpp
m2/4/optimal/: CMakeLists.txt  notW.cpp  out.txt  st.bash
m2/rk/1/: 1.cpp
m2/rk/2/: 2.cpp  CMakeLists.txt
m2/rk/3/: 3.cpp
m2/rk/4/: 4.cpp
m3/1/: main.cpp  st.bash
m3/1/ArcGraph/: ArcGraph.cpp  ArcGraph.h
m3/1/IGraph/: IGraph.cpp
m3/1/ListGraph/: ListGraph.cpp  ListGraph.h
m3/1/MatrixGraph/: MatrixGraph.cpp  MatrixGraph.h
m3/2/: 2.cpp
m3/3/: 3.cpp
m3/rk/1/: 1.cpp
m3/rk/2/: 2.cpp
rk1/1/: 1.cpp
rk1/2/: 2.cpp
rk1/3/: 3.cpp
workflows/: ci.yml
